WIP: Bump upstreams
Adopt:
- odlparent-13.0.11
- infrautils-6.0.6
- yangtools-13.0.2
- mdsal-13.0.1
- controller-9.0.1
- aaa-0.19.2
- netconf-7.0.2-SNAPSHOT

Change-Id: Ic7add7ae502e633fea35b99193bf282bb15f1303
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>